# revm

bins/revme/: CHANGELOG.md
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: host.rs  inner_models.rs  instruction_result.rs  interpreter.rs  opcode.rs
crates/interpreter/src/gas/: calc.rs  constants.rs
crates/interpreter/src/host/: dummy.rs
crates/interpreter/src/instructions/: contract.rs  host.rs  opcode.rs
crates/interpreter/src/instructions/contract/: call_helpers.rs
crates/interpreter/src/instructions/host/: call_helpers.rs
crates/interpreter/src/interpreter/: serde.rs
crates/interpreter/src/interpreter_action/: call_inputs.rs
crates/precompile/: CHANGELOG.md  Cargo.toml
crates/precompile/src/: lib.rs  secp256k1.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: lib.rs  result.rs  secp256k1.rs  specification.rs
crates/revm/: CHANGELOG.md
crates/revm/src/: evm.rs  evm_context.rs  evm_impl.rs
crates/revm/src/context/: inner_evm_context.rs
