[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "revm primitives"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm", "types"]
license = "MIT"
name = "revm-primitives"
repository = "https://github.com/bluealloy/revm"
version = "1.3.0"
readme = "../../README.md"

# Don't need to run build script outside of this repo
exclude = ["build.rs", "src/kzg/*.txt"]

[dependencies]
alloy-primitives = { version = "0.5", default-features = false, features = [
    "rlp",
] }
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
hashbrown = "0.14"
auto_impl = "1.1"
bitvec = { version = "1", default-features = false, features = ["alloc"] }
bitflags = { version = "2.4.1", default-features = false }

# For setting the CfgEnv KZGSettings. Enabled by c-kzg flag.
c-kzg = { version = "0.4.0", default-features = false, optional = true }
once_cell = { version = "1.18", default-features = false, optional = true }

# utility
enumn = "0.1"
derive_more = { version = "0.99", optional = true }

# ecrecover
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.28.0", default-features = false, features = [
    "alloc",
    "recovery",
], optional = true }

# optional
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[build-dependencies]
hex = "0.4"

[features]
default = ["std", "c-kzg"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "hex/std",
    "bitvec/std",
    "bitflags/std",
    "k256/std",
    "secp256k1?/std",
]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "hex/serde",
    "hashbrown/serde",
    "bitvec/serde",
    "bitflags/serde",
    "c-kzg?/serde",
]
arbitrary = ["std", "alloy-primitives/arbitrary", "bitflags/arbitrary"]

optimism = []

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
    "optional_beneficiary_reward",
]
memory_limit = []
no_gas_measuring = []
optional_balance_check = []
optional_block_gas_limit = []
optional_eip3607 = []
optional_gas_refund = []
optional_no_base_fee = []
optional_beneficiary_reward = []

# See comments in `revm-precompile`
c-kzg = ["dep:c-kzg", "dep:once_cell", "dep:derive_more"]
# Use `secp256k1` as a faster alternative to `k256`.
# The problem that `secp256k1` has is it fails to build for `wasm` target on Windows and Mac as it is c lib.
# In Linux it passes. If you don't require to build wasm on win/mac, it is safe to use it and it is enabled by default.
secp256k1 = ["dep:secp256k1"]
